# obsidian-ai-note-renamer

./: .gitignore  README.md  README_CN.md  manifest.json  package.json  styles.css
.github/workflows/: README.md  release.yml
pty-server/: Cargo.toml  README.md
pty-server/.cargo/: config.toml
pty-server/src/: main.rs  pty_session.rs  server.rs  shell.rs
scripts/: README.md  build-rust.js  install-dev.js  package-plugin.js
src/: main.ts
src/services/: aiService.ts  fileAnalyzer.ts  fileNameService.ts
src/services/terminal/: terminalInstance.ts  terminalService.ts
src/settings/: settings.ts  settingsTab.ts
