[package]
name = "pty-server"
version = "1.0.0"
edition = "2021"

[dependencies]
portable-pty = "0.9"
# Only enable necessary tokio features to reduce initialization overhead
tokio = { version = "1", features = ["rt", "net", "sync", "signal", "macros"] }
tokio-tungstenite = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"

[profile.release]
opt-level = 3       # Optimize for speed rather than size
lto = "thin"        # Use thin LTO, balance compile speed and runtime performance
codegen-units = 1   # Better optimization
strip = true        # Remove symbol table
panic = "abort"     # Reduce binary size
